# learning-rust

./: Cargo.toml  README.md
chapter1/: 1_hello_world.rs  2_sum.rs  3_hello_world_again.rs
chapter2/: 10_loop.rs  11_while.rs  12_for.rs  14_scope_error.rs  15_array_sum.rs  16_tuple.rs  17_tuple_destructure.rs  18_tuple_const.rs  19_vector.rs  1_variables.rs  20_vector_init.rs  21_vector_modify.rs  22_hashmap.rs  23_hashmap_value.rs  24_hashmap_loop.rs  25_string.rs  26_string_push.rs  27_string_insert.rs  28_string_slice.rs  29_function.rs  2_variable_reassign_error.rs  30_function_calc.rs  31_closure.rs  34_mutable_closure_variable.rs  3_mut_variable.rs  4_variable_shadowing.rs  5_const.rs  6_if_statement.rs  7_elseif.rs  8_match.rs
chapter3/: 10_slice.rs  12_slice_copy.rs  13_array_slice.rs  16_struct.rs  17_struct_constructor.rs  1_copy_str.rs  21_struct_method.rs  22_static_method.rs  23_trait.rs  24_trait_function_arg.rs  25_trait_function_ref.rs  26_trait_function_ref_usage.rs  27_trait_impl_print.rs  28_trait_impl_usage.rs  29_trait_box.rs  2_move_string.rs  30_trait_box_usage.rs  31_debug_trait.rs  32_default_trait.rs  33_generic.rs  34_generic_fn.rs  35_generic_impl.rs  36_trait_box_setup.rs  37_trait_box_usage.rs  38_trait_dyn.rs  39_enum_kind.rs  3_copy_number.rs  4_function_move.rs  6_reference.rs  7_reference_scope.rs  8_mut_reference.rs  9_dereference.rs
chapter4/: 10_error_kind_usage.rs  11_thread.rs  12_thread_sleep.rs  13_thread_loop.rs  14_thread_wait.rs  15_thread_join.rs  16_thread_join_all.rs  17_thread_move.rs  18_thread_mutex.rs  19_thread_mutex_scope.rs  1_option.rs  20_deadlock.rs  21_thread_channel.rs  22_thread_dual_channel.rs  23_thread_sync_channel.rs  24_file_read.rs  25_file_read_error.rs  26_file_write.rs  27_file_append.rs  28_dir_read.rs  29_dir_file_type.rs  2_option_vec.rs  30_file_backup.rs  3_option_random.rs  4_option_match.rs  5_option_panic.rs  6_result.rs  7_option_result.rs  8_result_match.rs  9_error_kind.rs
chapter5/: 10_radio_enum.rs  11_radio_setup.rs  12_radio.rs  13_slider_setup.rs  14_slider.rs  15_drag_value.rs  16_selectable_enum.rs  17_selectable_setup.rs  18_selectable.rs  19_textEdit_setup.rs  1_eframe_setup.rs  20_textEdit.rs  21_textEdit_changed.rs  22_painter_setup.rs  23_painter_rect.rs  24_painter_rect_vars.rs  25_painter_circle.rs  26_painter_line.rs  27_painter_text.rs  28_painter_path.rs  29_painter_click_setup.rs  30_painter_click.rs  3_central_panel.rs  4_light_theme.rs  5_label.rs  6_label_style.rs  7_button.rs  8_checkbox_setup.rs  9_checkbox.rs
chapter6/: 10_cargo_serde.rs  12_axum_json_route.rs  13_mydata_struct.rs  14_axum_json.rs  15_cargo_tera.rs  16_tera_template.rs  17_axum_tera.rs  18_axum_tera_handler.rs  19_tera_form_template.rs  1_axum_hello.rs  20_axum_form_route.rs  21_serde_use.rs  22_form_struct.rs  23_form_handler.rs  2_axum_handler.rs  4_axum_param_route.rs  5_axum_param.rs  6_axum_multi_param_route.rs  7_axum_multi_param.rs  8_axum_query_route.rs  9_axum_query.rs
examples/: list1_2_sum.rs  list2_11_while.rs  list2_12_for.rs  list2_16_tuple.rs  list2_29_function.rs  list2_32_closure_capture.rs  list2_33_mutable_closure.rs  list2_6_if_statement.rs  list2_8_match.rs  list2_9_match_or.rs  list3_11_slice_reference.rs  list3_14_vector_slice.rs  list3_15_vector_slice_copy.rs  list3_17_struct_constructor.rs  list3_18_struct_constructor_usage.rs  list3_19_tuple_struct.rs  list3_1_copy_str.rs  list3_20_struct_reference.rs  list3_23_trait.rs  list3_2_move_string.rs  list3_33_generic.rs  list3_5_function_return.rs  list3_8_mut_reference.rs  list4_11_thread.rs  list4_24_file_read.rs
